# sem3_lab2

./: CMakeLists.txt  main.cpp
src/: CLInterface.cpp  CLInterface.h  CLInterfaceFactory.cpp  CLInterfaceFactory.h  Computer.cpp  Computer.h  Field.cpp  Field.h  Game.cpp  Game.h  Interface.h  InterfaceFactory.h  Move.h  Person.cpp  Person.h  Player.h  QtInterface.cpp  QtInterface.h  QtInterfaceFactory.cpp  QtInterfaceFactory.h  utilities.h
ui/: entry_dialog.ui  main.ui
